# Collaborative-Coding-Exam

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTION.md  LICENSE  README.md  about.html  api.html  development.html  environment.yml  genindex.html  index.html  individual.html  lumi.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: about.doctree  api.doctree  development.doctree  environment.pickle  index.doctree  individual.doctree  lumi.doctree
.github/workflows/: format.yml  release.yml  sphinx.yml  test.yml
_sources/: about.md.txt  lumi.md.txt
configs/: mnist.cfg  svhn.cfg  usps.cfg
datasets/: dataset_links.txt
datasets/inference/: ascii_digit_0.txt  ascii_digit_1.txt  ascii_digit_2.txt  ascii_digit_5.txt  ascii_digit_8.txt
doc/: about.md  api.md  conf.py  development.md  index.md  individual.md  lumi.md
doc/_build/html/: .buildinfo  about.html  genindex.html  index.html  individual.html  search.html  searchindex.js
doc/_build/html/.doctrees/: about.doctree  environment.pickle  index.doctree  individual.doctree
doc/_build/html/_sources/: individual.md.txt
lumi/: evaluation.sh  train.sh
lumi/logs/: mnist_19201793.err  mnist_19344734.err  svhn_19201791.err  svhn_19345748.err  usps_19201795.err  usps_19372444.err
lumi_logs/: mnist_train_19176467.err  mnist_train_19176467.out  mnist_train_19177582.err  mnist_train_19199050.err  svhn_train_19193045.out
sh_scripts/: mnist_train.sh  svhn_train.sh  train.sh
sh_scripts/configs/: mnist.cfg  svhn.cfg  usps.cfg
src/: __init__.py  constants.py  data.py  evaluation.py  inference.py  instructions.md  models.py  training.py  utils.py
src/samples/: ascii_digit_5.txt  ascii_digit_8.txt
src/weights/: mnist.pth
tests/: test_data.py  test_inference.py  test_models.py  test_training.py
weights/: mnist.pth  svhn.pth  usps.pth
